syntax = "proto3";

package replication;

service Replication {
  rpc StreamWal(Handshake) returns (stream WalPacket);
  rpc GetRestoreConfig(RestoreRequest) returns (RestoreConfig);
  rpc StreamSnapshot(SnapshotRequest) returns (stream SnapshotResponse);
}

message RestoreRequest {
  string db_name = 1;
}

message RestoreConfig {
  string config_json = 1;
}

message WalPacket {
  oneof payload {
    bytes frame_data = 1;
    Checkpoint event = 2;
  }
}

message Handshake {
  string db_name = 1;
  string generation = 2;
  uint64 offset = 3;
  uint64 index = 4;
}

message Checkpoint {
  uint32 index = 1;
}

message Ack {
  bool success = 1;
}

message SnapshotRequest {
  string db_name = 1;
}

message SnapshotResponse {
  oneof payload {
    bytes chunk = 1;
    SnapshotError error = 2;
  }
}

message SnapshotError {
  enum Code {
    UNKNOWN = 0;
    BUSY = 1;
    NOT_FOUND = 2;
  }
  Code code = 1;
  string message = 2;
  uint32 retry_after_ms = 3;
}
